[gd_scene load_steps=2 format=3 uid="uid://dpyik3p6ymf5m"]

[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/DomainPanel/DomainPanelManager.gd" id="1_jehht"]

[node name="DomainPanel" type="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_jehht")

[node name="RefreshButton" type="Button" parent="."]
layout_mode = 2
text = "Refresh List"

[node name="BuildButton" type="Button" parent="."]
layout_mode = 2
text = "Build Domain File"

[node name="DomainNameLineEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Domain Name..."

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Loadable Domains"
horizontal_alignment = 1

[node name="SearchBar" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Search..."

[node name="Parent" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="BuildButton" to="." method="_on_build_button_pressed"]
[connection signal="text_changed" from="DomainNameLineEdit" to="." method="_on_domain_name_line_edit_text_changed"]
[connection signal="text_changed" from="SearchBar" to="." method="_on_search_bar_text_changed"]
